--- a/project head.html
+++ b/project head.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet"  href="project head.css">
 </head>
@@ -23,10 +26,10 @@
               <a href="">
                 <img src="McCanns-Logo-2021-full (1).png" alt="mcaons web">
               </a>
-              <ul>
+              <ul class="mainmenu">
                 <li><a href="">about</a></li>
                 <li><a href="">services</a>
-                <!-- <ul>
+                <ul class="submenu">
                     <li><a href="">roofing</a></li>
                     <li><a href="">roofing</a></li>
                     <li><a href="">roofing</a></li>
@@ -34,7 +37,7 @@
                     <li><a href="">roofing</a></li>
                     <li><a href="">roofing</a></li>
                     <li><a href="">roofing</a></li>
-                </ul> -->
+                </ul>
                 </li>
                 <li><a href="">projects</a></li>
                 <li><a href="">financing</a></li>
@@ -56,7 +59,28 @@
         <div class="upercase">
             <iframe width="500px" height="400" src="https://www.youtube.com/embed/1rBjqPz3mSg?list=RDMM1rBjqPz3mSg" title="Kde – Kde (Official Video): Harvi | Adaa Khan | Harmony |Bang Music | Latest Punjabi Songs 2021" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
-    </section>
+    <!-- </section>
+    <section>
+        <div class="flx">
+            <div class="flx">
+                <img src="icon-branding.svg" alt="web">  
+            <h1>A + BBB Rating</h1></div>
+            <div class="flx">
+                <img src="icon-30-years.svg" alt="web">
+                <h1>30 Years in Business</h1></div>
+            </div>
+        
+         <div class="flx">
+             <div class="flx">
+                <img src="icon-customers.svg" alt="web">
+                <h1>1,000s of Happy Customers</h1></div>
+    
+            <div class="flx">
+               <img src="icon-price.svg" alt="web">
+                <h1> Best Price Guarantee</h1>
+            </div>
+        </div>
+    </section> -->
 </div>
 </body>
 </html>
