--- a/transition1.html
+++ b/transition1.html
@@ -26,7 +26,7 @@
             <a href="">show tours</a></div></div> 
         </div>
         <div class="box1">
-            <img src="/th (3).jfif">
+            <img src="/cold-glacier-snow-291732.jpg">
             
             <div class="width">
                 <h3>EUROPE</h3>
