--- a/project head.html
+++ b/project head.html
@@ -96,8 +96,8 @@
             <div class="pageset1">
                 <h4>Free estimate, no obligation.</h2>
                 <form autocomplete>
-                <input type="text" placeholder="Full name" class="font" autofocus name="tree"><br>
-                <input type="text" minilength="1" maxlength="10" placeholder="Phone number" class="font"  name="tree"><br>
+                <input type="text" placeholder="Full name" class="font" name="tree" autofocus><br>
+                <input type="text" minlength="1" maxlength="10" placeholder="Phone number" class="font"  name="tree"><br>
                 <input type="email" placeholder="Email" class="font"  name="tree"><br>
                 <input type="text"   placeholder="Address" class="font"  name="tree"><br><br>
                 <label class="style">select service</label><br>
@@ -282,22 +282,22 @@
                         <li><a href="">Skylights</a></li>
                         <li><a href="">Windows & Doors</a></li>
                       </ul>
-                      <a href="">GET A FREE ESTIMATE</a>
+                      <a href="" class="">GET A FREE ESTIMATE</a>
                 </div>
                 <h2>Blog</h2>
                 <div class="address33">
                 <div>
                     
                     <a href="">How can you tell if your roof has wind damage?</a>
-                    <a href="">Read more</a>
+                    <a href="">Read more<i class="fa-solid fa-angles-right"></i></a>
                 </div>
                 <div>
                     <a href="">What percentage of roof damage is covered by insurance?</a>
-                    <a href="">Read more</a>
+                    <a href="">Read more<i class="fa-solid fa-angles-right"></i></a>
                 </div>
                 <div>
                     <a href="">What size of hail will damage a TPO roof?</a>
-                    <a href="">Read more</a>
+                    <a href="">Read more<i class="fa-solid fa-angles-right"></i></a>
                 </div>
             </div>
             </div>
