--- a/jumpball.html
+++ b/jumpball.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,14 +8,20 @@
     <title>Document</title>
     <link rel="stylesheet" href="jumpball.css">
 </head>
+
 <body>
-    <div id="wrapper">
-    <div id="box">
-        <div class="box1"></div>
-        <div class="ball"></div>
-        <div class="box2"></div>
-        
+    <div class="main">
+        <a href="">enquiry</a>
+        <div id="wrapper">
+            <div id="box">
+                <div class="box1"></div>
+                <div class="ball"></div>
+                <div class="box2"></div>
+
+            </div>
+
+        </div>
     </div>
-</div>
 </body>
+
 </html>
